--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
 				"@types/node": "^14.14.16",
 				"@types/react": "^17.0.0",
 				"@types/styled-components": "^5.1.7",
+				"i18next": "^19.8.4",
+				"i18next-icu": "^1.4.2",
 				"next": "^10.0.4",
+				"next-i18next": "^7.0.1",
 				"react": "^17.0.1",
 				"react-dom": "^17.0.1",
+				"react-i18next": "^11.8.5",
 				"styled-components": "^5.2.1",
 				"styled-reset": "^4.3.4",
 				"typescript": "^4.1.3"
