--- a/package.json
+++ b/package.json
@@ -1,49 +1,47 @@
 {
-		"name": "paulbkimdev-portfolio-v1",
-		"version": "1.0.0",
-		"description": "This is personal dev portfolio website for https://paulbkim.dev/",
-		"main": "index.js",
-		"scripts": {
-				"dev": "next dev",
-				"build": "next build",
-				"start": "next start",
-				"type-check": "tsc --project tsconfig.json --pretty --noEmit",
-				"lint": "eslint --ext js,jsx,ts,tsx --fix"
-		},
-		"keywords": [],
-		"author": "",
-		"license": "ISC",
-		"dependencies": {
-				"@types/node": "^14.14.16",
-				"@types/react": "^17.0.0",
-				"@types/styled-components": "^5.1.7",
-				"i18next": "^19.8.4",
-				"i18next-icu": "^1.4.2",
-				"next": "^10.0.4",
-				"next-i18next": "^7.0.1",
-				"react": "^17.0.1",
-				"react-dom": "^17.0.1",
-				"react-i18next": "^11.8.5",
-				"styled-components": "^5.2.1",
-				"styled-reset": "^4.3.4",
-				"typescript": "^4.1.3"
-		},
-		"devDependencies": {
-				"@typescript-eslint/eslint-plugin": "^4.11.1",
-				"@typescript-eslint/parser": "^4.11.1",
-				"babel-plugin-styled-components": "^1.12.0",
-				"eslint": "^7.16.0",
-				"eslint-config-prettier": "^7.1.0",
-				"eslint-plugin-jsx-a11y": "^6.4.1",
-				"eslint-plugin-prettier": "^3.3.0",
-				"eslint-plugin-react": "^7.21.5",
-				"eslint-plugin-react-hooks": "^4.2.0",
-				"husky": "^4.3.6",
-				"prettier": "^2.2.1"
-		},
-		"husky": {
-				"hooks": {
-						"pre-commit": "yarn type-check && yarn lint ."
-				}
-		}
+  "name": "paulbkimdev-portfolio-v1",
+  "version": "1.0.0",
+  "description": "This is personal dev portfolio website for https://paulbkim.dev/",
+  "main": "index.js",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "type-check": "tsc --project tsconfig.json --pretty --noEmit",
+    "lint": "eslint --ext js,jsx,ts,tsx --fix"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@tippyjs/react": "^4.2.0",
+    "@types/node": "^14.14.16",
+    "@types/react": "^17.0.0",
+    "@types/styled-components": "^5.1.7",
+    "framer-motion": "^3.1.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
+    "styled-components": "^5.2.1",
+    "styled-reset": "^4.3.4",
+    "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "babel-plugin-styled-components": "^1.12.0",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.6",
+    "prettier": "^2.2.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn type-check && yarn lint ."
+    }
+  }
 }
